@@ -1,3 +1,9 @@
+2009-07-25  Michael Snyder  <msnyder@vmware.com>
+
+	* target.h (struct target_ops): New methods to_set_checkpoint,
+	to_unset_checkpoint, to_restore_checkpoint, to_info_checkpoints.
+	* target.c (update_current_target): Inherit the above methods.
+
 2009-07-25  Pedro Alves  <pedro@codesourcery.com>
 
 	* stack.c (backtrace_command_1): Remove dead check of NULL current
